# aggregator

./: .gitmodules  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  traces.0  traces.1
src/: aggregator.c
